--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cache-install",
-  "version": "1.0.3",
-  "description": "Cache packages installed via Nix via the GitHub Actions cache",
+  "name": "Cache Nix packages",
+  "version": "1.0.4",
+  "description": "Use the GitHub Actions cache for Nix packages",
   "main": "src/index.js",
   "repository": {
     "type": "git",
