--- a/action.yml
+++ b/action.yml
@@ -17,9 +17,31 @@ inputs:
 outputs:
   cache-hit:
     description: 'A boolean value to indicate an exact match was found for the primary key'
-runs:
-  using: 'node12'
-  main: 'dist/index.js'
 branding:
   icon: 'arrow-down'
   color: 'blue'
+runs:
+  using: 'composite'
+  steps:
+    - shell: bash
+      run: ./dist/core.sh "prepare-restore"
+    - id: cache-restore
+      uses: actions/cache/restore@v3
+      with:
+        path: |
+          "/nix/store/"
+          "/nix/var/nix/profiles/per-user/$USER/profile/bin"
+          "/nix/var/nix/profiles/default/bin/"
+          "/nix/var/nix/profiles/per-user/root/channels"
+        key: ${{ inputs.key }}
+        restore-keys: ${{ inputs.restore-keys }}
+    - shell: bash
+      run: echo "cache-hit=${{ steps.cache-restore.outputs.cache-hit }}" >> $GITHUB_OUTPUT
+    - shell: bash
+      run: |
+        if [ "${{ steps.cache-restore.outputs.cache-hit" = "true" ]; then
+          ./dist/core.sh "install-with-nix"
+        else
+          ./dist/core.sh "install-from-cache"
+        fi
+
