--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,8 +91,8 @@ jobs:
         key: Test-Julia-${{ runner.os }}-${{ github.run_id }}
         nix_file: 'test/julia.nix'
 
-    - name: Test whether julia.nix is installed 
-      run: julia --color=yes -e 'using Pkg; Pkg.add("RCall"); using RCall; R"library(ggplot2)"'
+    #- name: Test whether julia.nix is installed
+      # run: julia --color=yes -e 'using Pkg; Pkg.add("RCall"); using RCall; R"library(ggplot2)"'
 
   test-restore-julia:
     needs: test-save-julia
