--- a/action.yml
+++ b/action.yml
@@ -27,15 +27,20 @@ runs:
       shell: bash
       run: ./dist/core.sh "prepare-restore"
 
+    - name: Pass USER to GitHub Action
+      id: user
+      shell: bash
+      run: echo "USER=$USER" >> $GITHUB_ENV
+
     - name: Restore cache
       id: cache
       uses: actions/cache/restore@v3
       with:
         path: |
-          "/nix/store/"
-          "/nix/var/nix/profiles/per-user/$USER/profile/bin/"
-          "/nix/var/nix/profiles/default/bin/"
-          "/nix/var/nix/profiles/per-user/root/channels/"
+          /nix/store/
+          /nix/var/nix/profiles/per-user/${{ env.USER }}/profile/bin/
+          /nix/var/nix/profiles/default/bin/
+          /nix/var/nix/profiles/per-user/root/channels/
         key: ${{ inputs.key }}
         restore-keys: ${{ inputs.restore-keys }}
 
@@ -51,6 +56,7 @@ runs:
       run: ./dist/core.sh "install-from-cache"
 
     - name: Install without cache
+      # Use `!= 'true'` because `cache-hit` is not set if no cache was restored.
       if: steps.cache.outputs.cache-hit != 'true'
       shell: bash
       run: |
@@ -64,8 +70,8 @@ runs:
       uses: actions/cache/save@v3
       with:
         path: |
-          "/nix/store/"
-          "/nix/var/nix/profiles/per-user/$USER/profile/bin/"
-          "/nix/var/nix/profiles/default/bin/"
-          "/nix/var/nix/profiles/per-user/root/channels/"
+          /nix/store/
+          /nix/var/nix/profiles/per-user/${{ env.USER }}/profile/bin/
+          /nix/var/nix/profiles/default/bin/
+          /nix/var/nix/profiles/per-user/root/channels/
         key: ${{ inputs.key }}
