Add `sw/bin` to path

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         key: Test-Simple-${{ runner.os }}-${{ github.run_id }}
         nix_file: 'test/simple.nix'
 
-    - run: sudo find / -name "hello"
+    - run: ls /run/current-system/sw/bin/
 
     - name: Test whether simple.nix is installed
       run: which hello
