--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,9 @@ inputs:
   nix_file:
     description: 'Nix file, defaults to `default.nix`.'
     default: 'default.nix'
+  nix_install_url:
+    description: 'Install URL for the Nix package manager; obtain newest via https://nixos.org/nix/install.'
+    default: 'https://releases.nixos.org/nix/nix-2.13.0/install'
 outputs:
   cache-hit:
     description: 'A boolean value to indicate an exact match was found for the primary key'
@@ -25,7 +28,7 @@ runs:
   steps:
     - name: Prepare for restoring cache
       shell: bash
-      run: ./dist/core.sh "prepare-restore"
+      run: ./src/core.sh "prepare-restore"
 
     - name: Pass USER to GitHub Action
       id: user
@@ -44,7 +47,6 @@ runs:
           /home/${{ env.USER }}/.nix-profile/bin/
         key: ${{ inputs.key }}
         restore-keys: ${{ inputs.restore-keys }}
-
     - name: Set cache-hit output
       shell: bash
       run: echo "cache-hit=$CACHE_HIT" >> $GITHUB_OUTPUT
@@ -54,18 +56,19 @@ runs:
     - name: Install with cache
       if: steps.cache.outputs.cache-hit == 'true'
       shell: bash
-      run: ./dist/core.sh "install-from-cache"
+      run: ./src/core.sh "install-from-cache"
 
     - name: Install without cache
       # Use `!= 'true'` because `cache-hit` is not set if no cache was restored.
       if: steps.cache.outputs.cache-hit != 'true'
       shell: bash
       run: |
-          ./dist/core.sh "install-with-nix"
-          ./dist/core.sh "prepare-save"
+          ./src/core.sh "install-with-nix"
+          ./src/core.sh "prepare-save"
       env:
         INPUT_NIX_FILE: ${{ inputs.nix_file }}
         INPUT_NIX_VERSION: ${{ inputs.nix_version }}
+        INPUT_NIX_INSTALL_URL: ${{ inputs.nix_install_url }}
 
     - name: Save cache
       uses: actions/cache/save@v3
