Set `cache-hit` output

--- a/action.yml
+++ b/action.yml
@@ -20,6 +20,7 @@ inputs:
 outputs:
   cache-hit:
     description: 'A boolean value to indicate an exact match was found for the primary key'
+    value: ${{ steps.hit.outputs.cache-hit }}
 branding:
   icon: 'arrow-down'
   color: 'blue'
@@ -47,11 +48,6 @@ runs:
           /home/${{ env.USER }}/.nix-profile/bin/
         key: ${{ inputs.key }}
         restore-keys: ${{ inputs.restore-keys }}
-    - name: Set cache-hit output
-      shell: bash
-      run: echo "cache-hit=$CACHE_HIT" >> $GITHUB_OUTPUT
-      env:
-        CACHE_HIT: ${{ steps.cache.outputs.cache-hit }}
 
     - name: Install with cache
       if: steps.cache.outputs.cache-hit == 'true'
@@ -80,3 +76,8 @@ runs:
           /nix/var/nix/profiles/per-user/root/channels/
           /home/${{ env.USER }}/.nix-profile/bin/
         key: ${{ inputs.key }}
+
+    - name: Set cache-hit output
+      id: hit
+      shell: bash
+      run: echo "cache-hit=${{ steps.cache.outputs.cache-hit }}" >> $GITHUB_OUTPUT
