--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
   steps:
     - name: Prepare for restoring cache
       shell: bash
-      run: ./src/core.sh "prepare-restore"
+      run: $GITHUB_ACTION_PATH/src/core.sh "prepare-restore"
 
     - name: Pass USER to GitHub Action
       id: user
@@ -55,15 +55,15 @@ runs:
     - name: Install with cache
       if: steps.cache.outputs.cache-hit == 'true'
       shell: bash
-      run: ./src/core.sh "install-from-cache"
+      run: $GITHUB_ACTION_PATH/src/core.sh "install-from-cache"
 
     - name: Install without cache
       # Use `!= 'true'` because `cache-hit` is not set if no cache was restored.
       if: steps.cache.outputs.cache-hit != 'true'
       shell: bash
       run: |
-          ./src/core.sh "install-with-nix"
-          ./src/core.sh "prepare-save"
+          $GITHUB_ACTION_PATH/src/core.sh "install-with-nix"
+          $GITHUB_ACTION_PATH/src/core.sh "prepare-save"
       env:
         INPUT_NIX_FILE: ${{ inputs.nix_file }}
         INPUT_NIX_VERSION: ${{ inputs.nix_version }}
