Cache the nix store database too
Nix records all store paths in its database. If Nix evaluates an
expression which refers to a store path not in the Nix database, it will
rebuilt the corresponding derivation. Hence, such paths aren't really
cached. The garbage collector also checks the validity of store paths
(and requires the database to find dependencies) and deletes all invalid
paths.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,9 @@ jobs:
         fi
 
     - name: Test whether simple.nix is installed
-      run: hello
+      run: |
+        nix-store --gc # Remove invalid store paths
+        hello
 
 
 
@@ -84,7 +86,9 @@ jobs:
         nix_file: 'test/latex.nix'
 
     - name: Test whether latex.nix is installed
-      run: which pdfcrop
+      run: |
+        nix-store --gc # Remove invalid store paths
+        which pdfcrop
 
 
 
@@ -119,4 +123,6 @@ jobs:
         nix_file: 'test/simple.nix'
 
     - name: Test whether simple.nix is installed
-      run: hello
+      run: |
+        nix-store --gc # Remove invalid store paths
+        hello
