Cache the Nix database too (#20)
* Cache the nix store database too

Nix records all store paths in its database. If Nix evaluates an
expression which refers to a store path not in the Nix database, it will
rebuilt the corresponding derivation. Hence, such paths aren't really
cached. The garbage collector also checks the validity of store paths
(and requires the database to find dependencies) and deletes all invalid
paths.

* Reduce the size of the Nix store before caching it

When caching a derivation which requires a lot of build dependencies but
doesn't require them at runtime, they are still included in GitHub's
cache. Hence, the garbage collector is run to reduce the cache size and
thus enhance the cache restore performance. For the same reason, the
cache is optimized by using hard links where appropriate (`nix-store`s
`--optimise` flag).

* Bump the GitHub action dependency versions

* Bump Nix version

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Save cache
       uses: ./
@@ -31,7 +31,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Restore cache
       id: cache
@@ -51,7 +51,9 @@ jobs:
         fi
 
     - name: Test whether simple.nix is installed
-      run: hello
+      run: |
+        nix-store --gc # Remove invalid store paths
+        hello
 
 
 
@@ -59,7 +61,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Save cache
       uses: ./
@@ -75,7 +77,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Restore cache
       uses: ./
@@ -84,7 +86,9 @@ jobs:
         nix_file: 'test/latex.nix'
 
     - name: Test whether latex.nix is installed
-      run: which pdfcrop
+      run: |
+        nix-store --gc # Remove invalid store paths
+        which pdfcrop
 
 
 
@@ -92,7 +96,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Save cache
       uses: ./
@@ -108,7 +112,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Restore cache
       uses: ./
@@ -119,4 +123,6 @@ jobs:
         nix_file: 'test/simple.nix'
 
     - name: Test whether simple.nix is installed
-      run: hello
+      run: |
+        nix-store --gc # Remove invalid store paths
+        hello
